[gd_scene load_steps=70 format=3 uid="uid://c2it6aijh30am"]

[ext_resource type="Texture2D" uid="uid://cmuwdke5npuqy" path="res://resources/golf.png" id="1_h0ikx"]
[ext_resource type="Script" path="res://Scripts/player.gd" id="1_vg6jp"]
[ext_resource type="AudioStream" uid="uid://bmwhygjaful2c" path="res://resources/sfx/charge.wav" id="2_1r8bs"]
[ext_resource type="Script" path="res://Scripts/PlayerInput.gd" id="2_dbhay"]
[ext_resource type="PackedScene" uid="uid://bxtrc3nxvsvgk" path="res://Scenes/club.tscn" id="3_q4ucv"]
[ext_resource type="Script" path="res://Scripts/Components/StateMachine.gd" id="6_4wd0j"]
[ext_resource type="Script" path="res://Scripts/States/PlayerInitial.gd" id="6_egrte"]
[ext_resource type="Script" path="res://Scripts/States/PlayerFake.gd" id="7_fu4bx"]
[ext_resource type="Script" path="res://Scripts/States/PlayerIdle.gd" id="8_n2wqx"]
[ext_resource type="Script" path="res://Scripts/States/PlayerWalking.gd" id="9_mbbpc"]
[ext_resource type="Script" path="res://Scripts/States/PlayerAiming.gd" id="10_rigkp"]

[sub_resource type="Shader" id="Shader_wdekn"]
code = "shader_type canvas_item;
render_mode blend_mix;

uniform float radius = 0.25;
uniform vec4 modulate : source_color;

void fragment() {
	vec2 ps = TEXTURE_PIXEL_SIZE;

	vec4 shadow = texture(TEXTURE, UV + vec2(-radius, -radius) * ps);

	shadow += texture(TEXTURE, UV + vec2(-radius, 0.0) * ps);
	shadow += texture(TEXTURE, UV + vec2(-radius, radius) * ps);
	shadow += texture(TEXTURE, UV + vec2(0.0, -radius) * ps);
	shadow += texture(TEXTURE, UV + vec2(0.0, radius) * ps);
	shadow += texture(TEXTURE, UV + vec2(radius, -radius) * ps);
	shadow += texture(TEXTURE, UV + vec2(radius, 0.0) * ps);
	shadow += texture(TEXTURE, UV + vec2(radius, radius) * ps);
	shadow /= 8.0;
	shadow *= modulate;

	vec4 col = texture(TEXTURE, UV);
	COLOR = mix(shadow, col, col.a);
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qhnu6"]
shader = SubResource("Shader_wdekn")
shader_parameter/radius = 5.0
shader_parameter/modulate = null

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_pd2ek"]
properties/0/path = NodePath(".:player_id")
properties/0/spawn = true
properties/0/replication_mode = 2
properties/1/path = NodePath(".:player_name")
properties/1/spawn = true
properties/1/replication_mode = 2
properties/2/path = NodePath(".:player_color")
properties/2/spawn = true
properties/2/replication_mode = 1

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_2ratp"]
properties/0/path = NodePath(".:sync_pos")
properties/0/spawn = true
properties/0/replication_mode = 2
properties/1/path = NodePath(".:sync_club_vis")
properties/1/spawn = true
properties/1/replication_mode = 2
properties/2/path = NodePath(".:sync_direction")
properties/2/spawn = true
properties/2/replication_mode = 2
properties/3/path = NodePath(".:sync_is_swinging")
properties/3/spawn = true
properties/3/replication_mode = 2
properties/4/path = NodePath(".:sync_club_rot")
properties/4/spawn = true
properties/4/replication_mode = 2

[sub_resource type="AtlasTexture" id="AtlasTexture_bj76v"]
atlas = ExtResource("1_h0ikx")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ik2bh"]
atlas = ExtResource("1_h0ikx")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3gn5c"]
atlas = ExtResource("1_h0ikx")
region = Rect2(112, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8gjom"]
atlas = ExtResource("1_h0ikx")
region = Rect2(128, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ir8ny"]
atlas = ExtResource("1_h0ikx")
region = Rect2(144, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pac8b"]
atlas = ExtResource("1_h0ikx")
region = Rect2(144, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_40fys"]
atlas = ExtResource("1_h0ikx")
region = Rect2(128, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fj5os"]
atlas = ExtResource("1_h0ikx")
region = Rect2(96, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6atqd"]
atlas = ExtResource("1_h0ikx")
region = Rect2(96, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4yrv"]
atlas = ExtResource("1_h0ikx")
region = Rect2(112, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_f141o"]
atlas = ExtResource("1_h0ikx")
region = Rect2(128, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_u678d"]
atlas = ExtResource("1_h0ikx")
region = Rect2(144, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_re3iy"]
atlas = ExtResource("1_h0ikx")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mbqbm"]
atlas = ExtResource("1_h0ikx")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0v3ct"]
atlas = ExtResource("1_h0ikx")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_thmmx"]
atlas = ExtResource("1_h0ikx")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8hbg5"]
atlas = ExtResource("1_h0ikx")
region = Rect2(160, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_w5mmy"]
atlas = ExtResource("1_h0ikx")
region = Rect2(176, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_o0oir"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bj76v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ik2bh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3gn5c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gjom")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ir8ny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pac8b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_40fys")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fj5os")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6atqd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4yrv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f141o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u678d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_re3iy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mbqbm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0v3ct")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_thmmx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8hbg5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w5mmy")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_or3ir"]
radius = 3.0
height = 10.0

[sub_resource type="CircleShape2D" id="CircleShape2D_trae2"]
radius = 18.0

[sub_resource type="Animation" id="Animation_d5ixx"]
resource_name = "IdleDown"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="Animation" id="Animation_2bnmr"]
resource_name = "IdleLeft"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_txf7y"]
resource_name = "IdleRight"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [13]
}

[sub_resource type="Animation" id="Animation_sx7ep"]
resource_name = "IdleUp"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_krrgb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}

[sub_resource type="Animation" id="Animation_ktb56"]
resource_name = "SwingDown"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [16]
}

[sub_resource type="Animation" id="Animation_2f1nm"]
resource_name = "SwingUp"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [17]
}

[sub_resource type="Animation" id="Animation_07k22"]
resource_name = "WalkDown"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [9, 10, 11, 10]
}

[sub_resource type="Animation" id="Animation_7b0sy"]
resource_name = "WalkLeft"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 0, 5, 6]
}

[sub_resource type="Animation" id="Animation_q2ypn"]
resource_name = "WalkRight"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_7aj70"]
resource_name = "WalkUp"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [2, 3, 4, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m7hqo"]
_data = {
"IdleDown": SubResource("Animation_d5ixx"),
"IdleLeft": SubResource("Animation_2bnmr"),
"IdleRight": SubResource("Animation_txf7y"),
"IdleUp": SubResource("Animation_sx7ep"),
"RESET": SubResource("Animation_krrgb"),
"SwingDown": SubResource("Animation_ktb56"),
"SwingUp": SubResource("Animation_2f1nm"),
"WalkDown": SubResource("Animation_07k22"),
"WalkLeft": SubResource("Animation_7b0sy"),
"WalkRight": SubResource("Animation_q2ypn"),
"WalkUp": SubResource("Animation_7aj70")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ft6yk"]
animation = &"IdleLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_cr2cr"]
animation = &"IdleDown"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qaiil"]
animation = &"IdleRight"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_yu7s3"]
animation = &"IdleUp"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_ngt8h"]
blend_point_0/node = SubResource("AnimationNodeAnimation_ft6yk")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_cr2cr")
blend_point_1/pos = Vector2(0, 1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_qaiil")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_yu7s3")
blend_point_3/pos = Vector2(0, -1.1)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_07fup"]
animation = &"SwingDown"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jvjq2"]
animation = &"SwingUp"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_en6qi"]
blend_point_0/node = SubResource("AnimationNodeAnimation_07fup")
blend_point_0/pos = -1.0
blend_point_1/node = SubResource("AnimationNodeAnimation_jvjq2")
blend_point_1/pos = 1.0
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vubbx"]
animation = &"WalkLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_c3fl7"]
animation = &"WalkDown"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ivbhq"]
animation = &"WalkRight"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_e5fq6"]
animation = &"WalkUp"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_4lv5j"]
blend_point_0/node = SubResource("AnimationNodeAnimation_vubbx")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_c3fl7")
blend_point_1/pos = Vector2(0, 1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_ivbhq")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_e5fq6")
blend_point_3/pos = Vector2(0, -1.1)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_dq4ao"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qypcm"]
advance_mode = 2
advance_condition = &"is_moving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_43c8k"]
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_w6ipq"]
advance_mode = 2
advance_condition = &"swing"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_tokb8"]
advance_mode = 2
advance_condition = &"is_moving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wqkee"]
advance_mode = 2
advance_condition = &"swing"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2liq5"]
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_715d4"]
states/End/position = Vector2(770, 94)
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_ngt8h")
states/Idle/position = Vector2(368, 94)
states/Start/position = Vector2(163, 94)
states/Swing/node = SubResource("AnimationNodeBlendSpace1D_en6qi")
states/Swing/position = Vector2(480, 252)
states/Walk/node = SubResource("AnimationNodeBlendSpace2D_4lv5j")
states/Walk/position = Vector2(592, 94)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_dq4ao"), "Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_qypcm"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_43c8k"), "Idle", "Swing", SubResource("AnimationNodeStateMachineTransition_w6ipq"), "Swing", "Walk", SubResource("AnimationNodeStateMachineTransition_tokb8"), "Walk", "Swing", SubResource("AnimationNodeStateMachineTransition_wqkee"), "Swing", "Idle", SubResource("AnimationNodeStateMachineTransition_2liq5")]

[node name="Player" type="CharacterBody2D" groups=["camera_targets", "players"]]
z_index = 1
y_sort_enabled = true
material = SubResource("ShaderMaterial_qhnu6")
collision_layer = 0
collision_mask = 2
motion_mode = 1
script = ExtResource("1_vg6jp")
player_color = Color(1, 1, 1, 1)

[node name="ChargeSound" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("2_1r8bs")
volume_db = -20.0
bus = &"SFX"

[node name="PlayerIdSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_pd2ek")

[node name="DataSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_interval = 0.05
delta_interval = 0.05
replication_config = SubResource("SceneReplicationConfig_2ratp")

[node name="PlayerInput" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_dbhay")
direction_mode = 1
initial_direction_mode = 1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
sprite_frames = SubResource("SpriteFrames_o0oir")
frame = 10

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_or3ir")

[node name="Club" parent="." instance=ExtResource("3_q4ucv")]
unique_name_in_owner = true
visible = false

[node name="BallRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="BallRange"]
position = Vector2(0, 5)
shape = SubResource("CircleShape2D_trae2")
debug_color = Color(0.784314, 0.956863, 1, 0.117647)
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_m7hqo")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
unique_name_in_owner = true
root_node = NodePath("%AnimationTree/..")
libraries = {
"": SubResource("AnimationLibrary_m7hqo")
}
tree_root = SubResource("AnimationNodeStateMachine_715d4")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/idle = false
parameters/conditions/is_moving = false
parameters/conditions/swing = false
parameters/Idle/blend_position = Vector2(0, 0)
parameters/Swing/blend_position = -0.613737
parameters/Walk/blend_position = Vector2(0, 0)

[node name="Name" type="Label" parent="."]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1.0
offset_top = -24.0
offset_right = 1.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)
horizontal_alignment = 1
metadata/_edit_lock_ = true

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("6_4wd0j")
initial_state = NodePath("Initial")

[node name="Initial" type="Node" parent="StateMachine"]
script = ExtResource("6_egrte")

[node name="Fake" type="Node" parent="StateMachine"]
script = ExtResource("7_fu4bx")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("8_n2wqx")

[node name="Walking" type="Node" parent="StateMachine"]
script = ExtResource("9_mbbpc")

[node name="Aiming" type="Node" parent="StateMachine"]
script = ExtResource("10_rigkp")

[connection signal="body_entered" from="BallRange" to="." method="_on_ball_range_body_entered"]
[connection signal="body_shape_exited" from="BallRange" to="." method="_on_ball_range_body_shape_exited"]
